# arboratrix

./: AUTHORS  ChangeLog  Doxyfile  INSTALL  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  arboratrix.glade  arboratrix2.glade  arboratrix2.gladep  bootstrap  configure  configure.ac  sishitra_config.h.in
config/: acinclude.m4
src/: Makefile.am  Makefile.in
src/gui/: Makefile.am  Makefile.in  acb_gui.h  application.cc  application.h  dialog.cc  dialog.h  fixed_tip.cc  fixed_tip.h  glade2.h  info_dialog.cc  info_dialog.h  object.cc  object.h  old_fixedtip.cc  old_fixedtip.h  progress_dialog.cc  progress_dialog.h  widget.cc  widget.h  window.cc  window.h  yes_no_dialog.cc  yes_no_dialog.h
src/mvc/: Makefile.am  Makefile.in  acb_mvc.h  model.cc  model.h  view.cc  view.h
src/tagger/: Makefile.am  Makefile.in  app_icon.h  arboratrix.cc  canvas.cc  canvas.h  canvas_item.cc  canvas_item.h  db_new_delete.cc  exporter.h  index_dialog.cc  index_dialog.h  list_manager.cc  list_manager.h  pixmaps.h  sentence.cc  sentence.h  sentence_list.cc  sentence_list.h  tag_info.cc  tag_info.h  tag_item.cc  tag_item.h  tag_list.cc  tag_list.h  tag_model.cc  tag_model.h  tagger_model.cc  tagger_model.h  tagger_view.cc  tagger_view.h  text_item.cc  text_item.h  text_model.cc  text_model.h  utils.cc  utils.h
